@@ -1658,20 +1658,6 @@ literal|"Content-Type"
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"UTF-8"
-argument_list|,
-name|DebugServlet
-operator|.
-name|headers
-operator|.
-name|get
-argument_list|(
-literal|"Content-Charset"
-argument_list|)
-argument_list|)
-expr_stmt|;
 comment|//XML/GET
 name|server
 operator|.
@@ -2165,20 +2151,6 @@ operator|.
 name|get
 argument_list|(
 literal|"Content-Type"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"UTF-8"
-argument_list|,
-name|DebugServlet
-operator|.
-name|headers
-operator|.
-name|get
-argument_list|(
-literal|"Content-Charset"
 argument_list|)
 argument_list|)
 expr_stmt|;
